test/runtime/fail/expr/add_invalid_operand.hy

// expect error: Invalid operand to binary operator `+`

let a = 3 + "hello"
